--- a/Toleo/Base.lproj/Main.storyboard
+++ b/Toleo/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ImagesListCell" rowHeight="226" id="qew-Sk-Vil" customClass="ImagesListCell" customModule="Toleo" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ImagesListCell" rowHeight="226" id="qew-Sk-Vil" customClass="ImagesListCell" customModule="Toleo" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="50" width="393" height="226"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qew-Sk-Vil" id="pYT-s6-6AN">
@@ -86,7 +86,7 @@
                                         <connections>
                                             <outlet property="cellImage" destination="06t-Od-6BU" id="sif-iP-na8"/>
                                             <outlet property="dateLabel" destination="4Uj-fh-ugf" id="sTY-Co-lsB"/>
-                                            <outlet property="gradient" destination="q28-tZ-6mY" id="Vtb-Hk-P42"/>
+                                            <outlet property="labelGradient" destination="q28-tZ-6mY" id="Vtb-Hk-P42"/>
                                             <outlet property="likeButton" destination="FzS-J2-74g" id="hbK-s2-Apj"/>
                                         </connections>
                                     </tableViewCell>
